--- a/index.html
+++ b/index.html
@@ -9,8 +9,41 @@
     <link rel="stylesheet" href="./main.css">
     <title>Photo Gallery</title>
 </head>
-
 <body>
+    <header>
+        <h1>Photo Gallery</h1>
+    </header>
+    <main>
+        <section class="options">
+            <select class="photo-type-filer">
+                <option value="" selected>all</option>
+                <option value="narwhal">narwhal</option>
+                <option value="rhino">rhino</option>
+                <option value="unicorn">unicorn</option>
+                <option value="triceratops">triceratops</option>
+                <option value="markhor">markhor</option>
+                <option value="mouflon">mouflon</option>
+                <option value="addax">addax</option>
+                <option value="chameleon">chameleon</option>
+                <option value="lizard">lizard</option>
+                <option value="dragon">dragon</option>
+            </select>
+        </section>
+        <section class="list-section">
+            <ul>
+                <li>
+                    <div class="info-container">
+                        <h2>UniWhal</h2>
+                        <p class="type">narwhal</p>
+                    </div>
+                    <div class="image-container">
+                        <img src="http://3.bp.blogspot.com/_DBYF1AdFaHw/TE-f0cDQ24I/AAAAAAAACZg/l-FdTZ6M7z8/s1600/Unicorn_and_Narwhal_by_dinglehopper.jpg"/>
+                    </div>
+                    <p class="horns">1</p>
+                </li>
+            </ul>
+        </section>
+    </main>
 
     <script type="module" src="./home/app.js"></script>
 </body>
