added populateList function

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
         <section class="options">
-            <select class="photo-type-filer">
+            <select id="filter">
                 <option value="" selected>all</option>
                 <option value="narwhal">narwhal</option>
                 <option value="rhino">rhino</option>
@@ -30,7 +30,7 @@
             </select>
         </section>
         <section class="list-section">
-            <ul>
+            <ul id="images">
                 <li>
                     <div class="info-container">
                         <h2>UniWhal</h2>
