--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="home/image-display.css">
+    <link rel="stylesheet" href="home/home.css">
     <title>Photo Gallery</title>
 </head>
 <body>
@@ -31,16 +33,6 @@
         </section>
         <section class="list-section">
             <ul id="images">
-                <li>
-                    <div class="info-container">
-                        <h2>UniWhal</h2>
-                        <p class="type">narwhal</p>
-                    </div>
-                    <div class="image-container">
-                        <img src="http://3.bp.blogspot.com/_DBYF1AdFaHw/TE-f0cDQ24I/AAAAAAAACZg/l-FdTZ6M7z8/s1600/Unicorn_and_Narwhal_by_dinglehopper.jpg"/>
-                    </div>
-                    <p class="horns">1</p>
-                </li>
             </ul>
         </section>
     </main>
