--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
             </ul>
         </section>
     </main>
-
+    <footer>
+        <h3>And this is the footer.</h3>
+    </footer>
     <script type="module" src="./home/app.js"></script>
 </body>
 
